# eshm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INTEROP_TEST_RESULTS.md  POSIX_SHM_MIGRATION.md  README.md  RELEASE_NOTES_v1.0.md  RUN_INTEROP_DEMO.md  eshm.cpp  eshm.h  main.cpp  test_write_count.py
cmake/: ESHMConfig.cmake.in
demo/: main.cpp
docs/: HIGH_PERFORMANCE_FEATURES.md  INTEGRATION_GUIDE.md  MEMORY_LAYOUT.md  QUICK_START.md  RECONNECTION_GUIDE.md  TEST.md
docs/examples/client_integration/: master.cpp
examples/: CMakeLists.txt  README.md  README_interop.md  README_simple_exchange.md  example_data_handle.cpp  interop_cpp_master.cpp  interop_cpp_slave.cpp  run_simple_exchange.sh  simple_api_demo.cpp  simple_exchange.cpp  test_interop.sh  test_truly_unlimited.cpp  test_unlimited_config.cpp
examples/client_integration/: CMakeLists.txt  README.md  slave.cpp
include/: asn1_der.h  data_handler.h  eshm.h  eshm_config.h.in  eshm_data.h
py/: PYTHON_WRAPPER_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py  build_shared_lib.sh  data_handler.py  data_handler_native.py  eshm.py  eshm_data.py
py/examples/: advanced_example.py  benchmark_native_vs_python.py  benchmark_slave.py  interop_py_master.py  interop_py_slave.py  performance_test.py  reconnect_demo.py  simple_exchange.py  simple_master.py  simple_slave.py  standalone_demo.py
py/tests/performance/: benchmark_master.py
scripts/: debug_reconnect.sh  gdb_test.sh  quick_test.sh  test_cpp_master_py_slave.sh  test_full_reconnect.sh  test_interop.sh  test_reconnect_retry.sh  test_unlimited_retry.sh
src/: asn1_decode.cpp  asn1_encode.cpp  data_handler.cpp  data_handler_c_api.cpp  eshm.cpp  eshm_data_api.cpp
test/: CMakeLists.txt  TEST.md  test_auto_role.cpp  test_basic.cpp  test_error_handling.cpp  test_master_slave.cpp  test_performance.cpp  test_reconnect.cpp  test_stale_detection.cpp
test/functional/: test_auto_role.cpp  test_basic.cpp  test_data_handler.cpp  test_error_handling.cpp  test_master_slave.cpp  test_reconnect.cpp  test_stale_detection.cpp
test/image_transfer/: CMakeLists.txt  README.md  dual_frame_receiver.cpp  dual_frame_sender.cpp  image_receiver.cpp  image_sender.cpp
test/performance/: test_benchmark_master.cpp
